--- a/SpringSecurity_03_customLoginForm/src/main/webapp/WEB-INF/web.xml
+++ b/SpringSecurity_03_customLoginForm/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,8 @@
 <web-app>
   <display-name>SpringSecurity</display-name>
     <welcome-file-list>
-        <welcome-file>home.jsp</welcome-file>
+<!--         <welcome-file>home.jsp</welcome-file> -->
+        <welcome-file>plain-login.jsp</welcome-file>
 <!--     <welcome-file>index.html</welcome-file> -->
 <!--     <welcome-file>index.htm</welcome-file> -->
 <!--     <welcome-file>index.jsp</welcome-file> -->
