security to acutator endpoints

--- a/SpringBoot_02_Actuator/pom.xml
+++ b/SpringBoot_02_Actuator/pom.xml
@@ -37,11 +37,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
-		
-		<!-- support for spring boot actuator-->
+
+		<!-- support for spring boot actuator -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+		<!-- add support for spring security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 	</dependencies>
 
