--- a/SpringBoot_02_Actuator/src/main/resources/application.properties
+++ b/SpringBoot_02_Actuator/src/main/resources/application.properties
@@ -6,3 +6,6 @@ info.app.version=1.0.0
 # Use wildcard "*" to expose all endpoints
 # Can also expose individual endpoints with a comma-delimited list
 management.endpoints.web.exposure.include=*
+
+# Exclude individual endpoints witha command-delimited list
+management.endpoints.web.exposure.exclude=health,info
