--- a/SpringBoot_03_AppProperties/src/main/resources/application.properties
+++ b/SpringBoot_03_AppProperties/src/main/resources/application.properties
@@ -1,15 +1,47 @@
-server.port=8085
 info.app.name=My Spring Boot app
 info.app.description=Learning Spring Boot wiht udemy
 info.app.version=1.0.0
 
-# Use wildcard "*" to expose all endpoints
-# Can also expose individual endpoints with a comma-delimited list
-management.endpoints.web.exposure.include=*
-
-# Exclude individual endpoints witha command-delimited list
-management.endpoints.web.exposure.exclude=health,info
-
 # Define properties
 coach.name=Micky Mouse
 team.name=The Micky Club
+
+##### WEB
+# Change embedded server port
+server.port=8083
+# Set the context path of the application
+## All the requestes will be prefixed with this path
+### Example: http://localhost:8083/myapplicationisthebest/teaminfo
+server.servlet.context-path=/myapplicationisthebest
+# Default HTTP session time out
+server.servlet.session.timeout=5m
+
+##### CORE (TRACE, DEBUG, INFO, WARN, ERROR, FATAL, OFF)
+#logging.level.org.springframework=DEBUG
+#logging.level.org.hibernate=TRACE
+#logging.level.es.spring.boot=INFO
+# LOG FILE 
+#logging.file=crazy-stuff.log
+
+##### ACTUATOR
+# Use wildcard "*" to expose all endpoints
+# Can also expose individual endpoints with a comma-delimited list
+management.endpoints.web.exposure.include=*
+# Exclude individual endpoints witha command-delimited list
+management.endpoints.web.exposure.exclude=health,info
+# Base path for actuator endpoints
+#management.endpoints.web.base-path=/actuator
+
+##### SECURITY
+# Default user name
+#spring.security.user.name=admin
+# password for user 
+#spring.security.user.passworkd=topsecret
+
+##### DATA
+# JDBC url of database
+#spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
+# login username of the database
+#spring.datasource.username=scott
+# login password of the database
+#spring.datasource.password=tiger
