create REST API

--- a/4_CRUD_SpringData_REST/pom.xml
+++ b/4_CRUD_SpringData_REST/pom.xml
@@ -22,6 +22,11 @@
 	</properties>
 
 	<dependencies>
+		<!-- add dependency for Spring Data REST -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
 		<dependency>
 			<!-- Hibernate ORM support -->
 			<groupId>org.springframework.boot</groupId>
