--- a/4_CRUD_SpringData_REST/src/main/resources/application.properties
+++ b/4_CRUD_SpringData_REST/src/main/resources/application.properties
@@ -4,3 +4,7 @@ server.port=8077
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
+
+#Spring Data REST properties
+spring.data.rest.base-path=/mysupercool-api
+spring.data.rest.default-page-size=3
